--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1018,7 +1018,7 @@
     <string name="chat_auto_reply_title">Текст сообщения скрыт</string>
     <string name="chat_auto_reply_message">Чтобы открыть и ответить на него, станьте VIP-пользователем</string>
     <string name="chat_auto_reply_button">Стать VIP</string>
-    <string name="photo_list_load_info">Поделитесь фотографиями и вас увидят миллионы</string>
+    <string name="photo_list_load_info">Поделитесь фотографиями, и вас увидят миллионы</string>
     <string name="vk_profile_button_tf_group">Группа Topface</string>
     <string name="vk_profile_button_join_tf_group">Вступить в группу Topface</string>
     <string name="vk_profile_button_join_vkgames_group">Вступить в группу "Игры ВК"</string>
@@ -1030,9 +1030,7 @@
     <string name="vk_friends_success_invite">Приглашение отправлено</string>
     <string name="join_group_success">Вы вступили в группу</string>
     <string name="settings_auto_greeting_title">Автоприветствие</string>
-    <string name="settings_auto_greeting_subtitle">Позволяет автоматически начинать диалог
-        приветствием при получении симпатии
-    </string>
+    <string name="settings_auto_greeting_subtitle">Позволяет автоматически начинать диалог приветствием при получении симпатии</string>
     <string name="take_photo_text_1">Пожалуйста, загрузите свою фотографию, чтобы начать знакомиться.</string>
     <string name="take_photo_text_2">На фото должны быть именно вы. Все фотографии модерируются.</string>
     <string name="unlock_by_viewed_ad_video_button_text">Разблокировать бесплатно на %s</string>
@@ -1085,6 +1083,12 @@
     <string name="photo_gallery_photo_deleted">Фотография удалена</string>
 
     <string name="photofeed_add_photo_to_feed_title">Подняться на первое место!</string>
-    <string name="photofeed_add_photo_to_feed_description">Разместите фото с приветствием и вас увидят тысячи людей. Привлеките внимание и познакомьтесь прямо сейчас.</string>
+    <string name="photofeed_add_photo_to_feed_description">Разместите фото с приветствием, и вас увидят тысячи людей. Привлеките внимание и познакомьтесь прямо сейчас.</string>
+
+    <string name="offers_screen_title">Бонусы</string>
+    <string name="offers_loading_text">Загружаем доступные для вас задания...</string>
+    <string name="offers_empty_text">К сожалению, доступных заданий для вас нет, попробуйте позже!</string>
+    <string name="offers_rewarded_video_title">Бесплатные монеты</string>
+    <string name="offers_rewarded_video_description">За просмотр видео</string>
 
 </resources>
