--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1094,7 +1094,7 @@
 
     <string name="app_of_the_day_ad_badge">Реклама</string>
 
-    <string name="profile_ditance_to_her">До неё </string>
-    <string name="profile_ditance_to_him">До него </string>
+    <string name="profile_ditance_to_her">До неё %d</string>
+    <string name="profile_ditance_to_him">До него %d</string>
 
 </resources>
